--- a/MCM2021 LaTeX paper/masterbib.bib
+++ b/MCM2021 LaTeX paper/masterbib.bib
@@ -706,6 +706,38 @@ abstract = { A mathematical model that reproduces fungal proliferation and morph
 	year = {2015}
 }
 
+@article{Kari2014,
+	Abstract = {Cellobiohydrolases are exo-active glycosyl hydrolases that processively convert cellulose to soluble sugars, typically cellobiose. They effectively break down crystalline cellulose and make up a major component in industrial enzyme mixtures used for deconstruction of lignocellulosic biomass. Identification of the rate-limiting step for cellobiohydrolases remains controversial, and recent reports have alternately suggested either association (on-rate) or dissociation (off-rate) as the overall bottleneck. Obviously, this uncertainty hampers both fundamental mechanistic understanding and rational design of enzymes with improved industrial applicability. To elucidate the role of on- and off-rates, respectively, on the overall kinetics, we have expressed a variant in which a tryptophan residue (Trp-38) in the middle of the active tunnel has been replaced with an alanine. This mutation weakens complex formation, and the population of substrate-bound W38A was only about half of the wild type. Nevertheless, the maximal, steady-state rate was twice as high for the variant enzyme. It is argued that these opposite effects on binding and activity can be reconciled if the rate-limiting step is after the catalysis (i.e. in the dissociation process).},
+	An = {25271162},
+	Author = {Kari, Jeppe and Olsen, Johan and Borch, Kim and Cruys-Bagger, Nicolaj and Jensen, Kenneth and Westh, Peter},
+	Date = {2014/11/21},
+	Date-Added = {2021-02-08 12:32:59 -0800},
+	Date-Modified = {2021-02-08 12:32:59 -0800},
+	Db = {PubMed},
+	Doi = {10.1074/jbc.M114.604264},
+	Et = {2014/09/30},
+	Isbn = {1083-351X; 0021-9258},
+	J2 = {J Biol Chem},
+	Journal = {The Journal of biological chemistry},
+	Keywords = {Biodegradation; Biofuel; Cellobiohydrolase; Cellulose; Crystalline Cellulose Degradation; Enzyme Kinetics; Trichoderma reesei; Alanine/chemistry/genetics/metabolism; Amino Acid Substitution; Binding Sites/genetics; Binding, Competitive/genetics; Biocatalysis; Catalytic Domain/genetics; Cellobiose/metabolism; Cellulose/metabolism; Cellulose 1,4-beta-Cellobiosidase/chemistry/*genetics/metabolism; Fungal Proteins/chemistry/*genetics/metabolism; Kinetics; Models, Molecular; *Mutation; Protein Binding/genetics; Substrate Specificity; Thermodynamics; Trichoderma/enzymology/*genetics/metabolism; Tryptophan/chemistry/genetics/metabolism},
+	L2 = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4239601/},
+	La = {eng},
+	Month = {11},
+	Number = {47},
+	Pages = {32459--32468},
+	Publisher = {American Society for Biochemistry and Molecular Biology},
+	Title = {Kinetics of cellobiohydrolase (Cel7A) variants with lowered substrate affinity},
+	Ty = {JOUR},
+	U1 = {25271162{$[$}pmid{$]$}},
+	U2 = {PMC4239601{$[$}pmcid{$]$}},
+	U4 = {S0021-9258(20)47452-6{$[$}PII{$]$}},
+	Url = {https://pubmed.ncbi.nlm.nih.gov/25271162},
+	Volume = {289},
+	Year = {2014},
+	Bdsk-Url-1 = {https://pubmed.ncbi.nlm.nih.gov/25271162},
+	Bdsk-Url-2 = {https://doi.org/10.1074/jbc.M114.604264}
+}
+
 @book{Holdridge1947,
 	title={Determination of world plant formations from simple climatic data},
 	author={Holdridge, LR.},
