--- a/MCM_2021_Madison_Writing 2/main.tex
+++ b/MCM_2021_Madison_Writing 2/main.tex
@@ -156,13 +156,13 @@ Decomposition of organic materials is essential to the continuation of carbon cy
  % FAK: tervor succy boi
  
  \subsection{$\nu$ vs Average Contribution to Substrate Decay} %avg_contr_nu_environment.fig
-Using the decomposition model, average contribution to substrate decay and the tip elongation rate $\nu$ can be found for each fungal species for a given environmental configuration. 
-
-The contribution of a particular fungi over time is taken to be the absolute value of the decrease in total carbon caused by all enzymes of the specific fungi in question divided by the total initial carbon of the substraight. As described in the model formulation, these decreases are calculated independently and summed together to calculate the total carbon decrease. The average contribution is then calculated as $C_{avg} = \frac{ \int C_{cont} dt}{\delta t}$ where $C_{cont}$ is the contribution of the enzyme in question and $\delta t$ is the total change in time.
+Using the decomposition model, average contribution to substrate decay and the tip elongation rate $\nu$ can be found for each fungal species for a given environmental configuration. The contribution of a particular fungi over time is taken to be the absolute value of the decrease in total carbon caused by all enzymes of the specific fungi in question divided by the total initial carbon of the substraight. As described in the model formulation, these decreases are calculated independently and summed together to calculate the total carbon decrease. The average contribution is then calculated as $C_{avg} = \frac{ \int C_{cont} dt}{\delta t}$ where $C_{cont}$ is the contribution of the enzyme in question and $\delta t$ is the total change in time.
 
 With one set of environmental parameters, we can gain insight into how different species of fungi potentially perform relative to each other, show in figure. In addition to an expected loose positive correlation between $\nu$ and the average contribution of a given fungi, these is a lose correlation of higher fungi competitive ranking with greater $\nu$ and greater average contribution. This suggests that the fungi that are more 'active' in our model, with the largest performance dependence on $\nu$, are also the most competitive. Competitive ranking has a higher correlation with $\nu$, indicating that in our model growth rate may be more sensitive to $\nu$ in competitive circumstances. This aligns with established trends of the primary 2 fungal niches \cite{Maynard2019}.
 
-Result were also viewed under 5 different sets of environmental conditions (water potential and temperature), each corresponding to a different biome, shown in figure. The results show that the correlation between $\nu$ and fungi contribution changes with environmental parameters. We find that in general, environments with a higher moisture potential lead to greater contributions overall and a greater contribution sensitivity to $\nu$ in our model. Our model agrees with the notion of water potential serving as an important limiting factor to the decomposition ability of individual fungi. These results can be interpreted as moisture potential and temperature limiting the effectiveness of faster-growing fungi.  
+Result were also viewed under 5 different sets of environmental conditions (water potential and temperature), each corresponding to a different biome, shown in figure. The results show that the correlation between $\nu$ and fungi contribution changes with environmental parameters. We find that in general, environments with a higher moisture potential lead to greater contributions overall and a greater contribution sensitivity to $\nu$ in our model. Our model agrees with the notion of water potential serving as an important limiting factor to the decomposition ability of individual fungi. These results can be interpreted as moisture potential and temperature limiting the effectiveness of faster-growing fungi. 
+
+Species of fungi with a generally higher competitive advantage (corresponding to points with a higher $\nu$ and higher contribution) are much more adversely affected by changes in environmental conditions than points with a generally lower competitive advantage. These species with a higher competitive advantage would then have a smaller moisture niche width (environmental changes affect them more adversely). This relationship implies that species in this niche would have a lower moisture tolerance, compared with species of less competitive advantage and less sensitivity to $\psi$. %here is bit connected to moisture tolerance
 
 \subsection{Short-Term Environmental Fluctuations}
 Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. Due to the time scales of our model, the effects of very fast fluctuations (due to outside forces) on the scale of days are not considered as relative changes in the model's state have negligible changes on the order of a day. Thus we define our short term fluctuations to be roughly seasonal as this dictates the majority of local environmental variability. To study the effects of these short time scale fluctuations, we choose to implement an abstracted yearly moisture cycle, specifically that of the temperate forest environment. The cycle oscillates between the average yearly maximum and minimum values of $\psi$ twice a year, creating a rough yearly pattern of $\psi$ and thus $\nu$ for a given fungi from experimental data \cite{Zobel2001}\cite{Maynard2019}. Note that this moisture model is limited in assuming one period oscillation between a maximum and a minimum yearly, neglecting the reality of oscillating between local minimum in summer and winter and locate maximums in fall and spring. To incorporate this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters over these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. The interpretation of this increase can be that for time scales on the order of a year, the positives affect of increasing $\nu$ is greater than that of the negative affect of decreasing $\nu$ by the same amount. This would lead us to believe that faster oscillations of $\nu$ will generally have a positive net impact on the decomposition. The frequency limits of this principle would require further investigation.
